# Flex_Polices_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL.md  main.py  pyproject.toml  requirements.txt  test_pipeline.py
notebook/: Documenet_loader.ipynb  document.ipynb
rag_pipeline/: __init__.py  embeddings.py  llm.py  retriever.py  vector_store.py
static/: app.js  index.html  style.css
