[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "curl-cffi>=0.15.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "huggingface-hub>=1.16.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "selenium>=4.44.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.2",
    "typesense>=2.0.0",
    "undetected-chromedriver>=3.5.5",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
